【优化】界面功能